--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
               <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                   <div class="copyright text-center my-auto ">
-                    <strong>&copy; 2019<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear().toString().substr(-2));</script> | Design by Faisal Khairudin</strong>
+                    <strong>&copy; 2019<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear().toString().substr(-2));</script> | Created by Faisal Khairudin</strong>
                   </div>
                 </div>
               </footer>
