--- a/portfolio/port.html
+++ b/portfolio/port.html
@@ -98,9 +98,9 @@
                   <img src="../assets/img/portfolio/3.png" alt="">
                 </div>
 
-                 <div class="swiper-slide">
+<!--                  <div class="swiper-slide">
                   <img src="../assets/img/portfolio/33.png" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
