--- a/portfolio/port2.html
+++ b/portfolio/port2.html
@@ -98,9 +98,9 @@
                   <img src="../assets/img/portfolio/5.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+    <!--             <div class="swiper-slide">
                   <img src="../assets/img/portfolio/55.png" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
