--- a/portfolio/port4.html
+++ b/portfolio/port4.html
@@ -98,13 +98,13 @@
                   <img src="../assets/img/portfolio/4.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+<!--                 <div class="swiper-slide">
                   <img src="../assets/img/portfolio/44.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="../assets/img/portfolio/444.png" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
