--- a/portfolio/portfolio-details.html
+++ b/portfolio/portfolio-details.html
@@ -98,10 +98,10 @@
                   <img src="../assets/img/portfolio/1.png" alt="">
                 </div>
 
-                 <div class="swiper-slide">
+<!--                  <div class="swiper-slide">
                   <img src="../assets/img/portfolio/11.png" alt="">
                 </div>
-
+ -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
