--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <h5>Dec 2020 - Present</h5>
               <p><em>Stepping Stone Advertising, New York, NY</em></p>
               <ul>
-                <li>Selling various kinds of clothes and so on through social media, is a new experience that I do to add new experiences and profits</li>
+                <li>Selling anything merchatdise by dropshipper in online shop, is a new experience that I do to add new experiences and profits</li>
               </ul>
             </div>
           </div>
@@ -282,9 +282,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Web1</li>
+              <li data-filter=".filter-card">Web2</li>
+              <li data-filter=".filter-web">Web3</li>
             </ul>
           </div>
         </div>
