--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web"><i class="bx bx-plus"></i></a>
                 <a href="portfolio/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -304,7 +304,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio/port.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -314,7 +314,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/4.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web"><i class="bx bx-plus"></i></a>
                 <a href="portfolio/port4.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -324,7 +324,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/5.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio/port2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -345,7 +345,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/6.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio/port3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
