--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Web1</li>
-              <li data-filter=".filter-card">Web2</li>
-              <li data-filter=".filter-web">Web3</li>
+              <li data-filter=".filter-app">Web</li>
+              <li data-filter=".filter-card">Web 1</li>
+              <li data-filter=".filter-web">Web 2</li>
             </ul>
           </div>
         </div>
