--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/faisal.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/fb.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><span>Faisal Khairudin</span></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/faisal_kha5" class="twitter"><i class="bx bxl-twitter"></i></a>
