--- a/portfolio/port5.html
+++ b/portfolio/port5.html
@@ -134,6 +134,7 @@
                 <li>NiceAdmin, PHP CI, Bootstrap 4, Jquery, Javascript, AJAX</li>
                 <li>login for 1 admin and many users</li>
                 <li>Enter price data, name, stock, and picture, edit, delete</li>
+                <li>Using user: admin, pass:123 for login admin and user:pela, pass: pela123 for users</li>
 
               </ul>
             </div>
