--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/p1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio/port5.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://joeradin.000webhostapp.com/penjualan/welcome" title="See Link"><i class="bx bx-bullseye"></i></a>
               </div>
             </div>
           </div>
