--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 September 1992</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6285 15788 4134</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Jl. Sunan GN. Djati, Rt. 03, Rw. 08, Ciledug, Tangerang Selatan</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Jl. Sunan Gn. Djati, No.42, Kel. Paninggilan Selatan, Kec. Ciledug, Kodya. Tangerang 15153</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -387,7 +387,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Jl. Sunan GN. Djati, Rt. 03, Rw. 08, No. 42 Kel. Paninggilan Selatan Kec. Ciledug, Kodya. Tangerang 15153 ·</p>
+                <p>Jl. Sunan Gn. Djati, No. 42 Kel. Paninggilan Selatan Kec. Ciledug, Kodya. Tangerang 15153 ·</p>
               </div>
 
               <div class="email">
