fix banget udah

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. i am physical disabilities, walking balance problems and a bit stiff hands without any assistive devices, do not dampen my spirits and I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
+          <p>I am physical disabilities, walking balance problems and a bit stiff hands without any assistive devices, do not dampen my spirits and i am a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
         </div>
 
         <div class="row">
