--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am physical disabilities, walking balance problems and a bit stiff hands without any assistive devices, do not dampen my spirits and i am a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
+          <p>I'm physical disabilities, walking balance problems and a bit stiff hands without any assist devices, i'm unstoppable, i'm invincible and i'm a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
         </div>
 
         <div class="row">
@@ -270,7 +270,7 @@
                 <li>Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</li>
               </ul>
             </div>
-            <div class="resume-item">
+<!--             <div class="resume-item">
               <h4>ONLINE SHOP</h4>
               <h5>Dec 2020 - Present</h5>
               <ul>
@@ -278,7 +278,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Resume Section -->
