--- a/index.html
+++ b/index.html
@@ -195,12 +195,26 @@
               </div>
             </div>
 
-          </div>
+          </div><div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+  <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
+            <div class="progress">
+              <span class="skill">WORDPRESS <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          <!-- </div> -->
 
+            <div class="progress">
+              <span class="skill">Node.js <i class="val">15%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             
-
 
 
             <div class="progress">
@@ -217,14 +231,6 @@
               </div>
             </div>
 
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="progress">
-              <span class="skill">WORDPRESS <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
           </div>
 
           
