--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Faisal Khairudin, I'm physical disabilities, walking balance problems and a bit stiff hands without any assist devices, i'm unstoppable, i'm invincible and i'm a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
+          <p>My name is Faisal Khairudin, I'm physical disabilities, walking balance problems and a bit stiff hands without any assist devices, but that can't divest me because i'm unstoppable, i'm invincible and i'm a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
         </div>
 
         <div class="row">
