cuma gitu doang

--- a/index.html
+++ b/index.html
@@ -269,22 +269,23 @@
             <h3 class="resume-title">Freelance Experience</h3>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
-              <h5>Feb 2020 - Juni 2022</h5>
+              <h5>Feb 2020 - Present</h5>
               <ul>
                 <li>Podcasting operational change management inside of workflows to establish a framework.</li>
                 <li>Taking seamless key performance indicators offline to maximise the long tail.</li>
                 <li>Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</li>
               </ul>
             </div>
-<!--             <div class="resume-item">
-              <h4>ONLINE SHOP</h4>
-              <h5>Dec 2020 - Present</h5>
+            <div class="resume-item">
+              <h4>JUNIOR WEB DEVELOPER</h4>
+              <h5>Jul 2022 - Aug 2022</h5>
+              <p><em>PT. Dimensi Teknologi Informatika</em></p>
               <ul>
-                <li>Selling anything merchatdise by dropshipper in online shop, is a new experience that I do to add new experiences and profits</li>
+                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health</li>
               </ul>
             </div>
           </div>
-        </div> -->
+        </div> 
 
       </div>
     </section><!-- End Resume Section -->
