FIX TUK BULAN INI

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <h5>Jul 2022 - Aug 2022</h5>
               <p><em>PT. Dimensi Teknologi Informatika</em></p>
               <ul>
-                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health</li>
+                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health e-KOHORT</li>
               </ul>
             </div>
           </div>
