--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
                 <li>Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</li>
               </ul>
             </div>
-            <div class="resume-item">
+<!--             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
               <h5>Jul 2022 - Aug 2022</h5>
               <p><em>PT. Dimensi Teknologi Informatika</em></p>
               <ul>
                 <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health e-KOHORT</li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div> 
 
