--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             </div>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
-              <h5>Jul 2022</h5>
+              <h5>Jul 2022 - Jul 2022</h5>
               <p><em>PT. Dimensi Teknologi Informatika</em></p>
               <ul>
                 <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health e-KOHORT</li>
