gak tau lagi jalan hidup gua

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Faisal Khairudin, I'm physical disabilities, walking balance problems and a bit stiff hands without any assist devices, but that can't divest me because i'm unstoppable, i'm invincible and i'm a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
+          <p>My name is Faisal Khairudin, I'm physical disabilities, walking balance problems and a bit stiff hands without any assist devices, but that can't divest me because i'm unstoppable, i'm invincible</p><p>and i'm a freelance who is looking for new challenges of work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, codeigniter framework, and other php frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
         </div>
 
         <div class="row">
@@ -269,19 +269,19 @@
             <h3 class="resume-title">Freelance Experience</h3>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
+              <h5>Jul 2022 - Jul 2022</h5>
+              <p><em>PT. Dimensi Teknologi Informatika</em></p>
+              <ul>
+                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health e-KOHORT</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>JUNIOR WEB DEVELOPER</h4>
               <h5>Feb 2020 - Present</h5>
               <ul>
                 <li>Podcasting operational change management inside of workflows to establish a framework.</li>
                 <li>Taking seamless key performance indicators offline to maximise the long tail.</li>
                 <li>Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>JUNIOR WEB DEVELOPER</h4>
-              <h5>Jul 2022 - Jul 2022</h5>
-              <p><em>PT. Dimensi Teknologi Informatika</em></p>
-              <ul>
-                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health e-KOHORT</li>
               </ul>
             </div>
           </div>
