--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <h2>Education</h2>
         </div>
 
-        <div class="row">
+<div class="row">
           <div class="col-lg-6" data-aos="fade-up">
 
             <h3 class="resume-title">Education</h3>
@@ -269,14 +269,6 @@
             <h3 class="resume-title">Freelance Experience</h3>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
-              <h5>Jul 2022 - Jul 2022</h5>
-              <p><em>PT. Dimensi Teknologi Informatika</em></p>
-              <ul>
-                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health e-KOHORT</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>JUNIOR WEB DEVELOPER</h4>
               <h5>Feb 2020 - Present</h5>
               <ul>
                 <li>Podcasting operational change management inside of workflows to establish a framework.</li>
@@ -285,7 +277,21 @@
               </ul>
             </div>
           </div>
-        </div> 
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Company Experience</h3>
+            <div class="resume-item">
+              <h4>JUNIOR WEB DEVELOPER</h4>
+              <h5>Jul 2022 - Aug 2022</h5>
+              <p><em>PT. Dimensi Teknologi Informatika</em></p>
+              <ul>
+                <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health</li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section><!-- End Resume Section -->
