--- a/index.html
+++ b/index.html
@@ -134,21 +134,21 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">90%</i></span>
+              <span class="skill">HTML</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">86%</i></span>
+              <span class="skill">CSS</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">85%</i></span>
+              <span class="skill">JavaScript</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -156,7 +156,7 @@
 
 
             <div class="progress">
-              <span class="skill">LARAVEL <i class="val">50%</i></span>
+              <span class="skill">LARAVEL</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -168,28 +168,28 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP/MYSQL <i class="val">85%</i></span>
+              <span class="skill">PHP/MYSQL</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JQUERY <i class="val">85%</i></span>
+              <span class="skill">JQUERY</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">.NET <i class="val">55%</i></span>
+              <span class="skill">.NET</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">LOGIC <i class="val">79%</i></span>
+              <span class="skill">LOGIC</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -198,7 +198,7 @@
           </div><div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
   <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
             <div class="progress">
-              <span class="skill">WORDPRESS <i class="val">50%</i></span>
+              <span class="skill">WORDPRESS</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -206,7 +206,7 @@
           <!-- </div> -->
 
             <div class="progress">
-              <span class="skill">Node.js <i class="val">15%</i></span>
+              <span class="skill">Node.js</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
