--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
 
 
             <div class="progress">
-              <span class="skill">CODEIGNITER <i class="val">85%</i></span>
+              <span class="skill">CODEIGNITER</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">AJAX/REALTIME <i class="val">85%</i></span>
+              <span class="skill">AJAX/REALTIME</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
