--- a/index.html
+++ b/index.html
@@ -278,7 +278,19 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            
+            <h3 class="resume-title">Additional Experience</h3>
+            <div class="resume-item">
+              <h4>ONLINE CAREER COACHING</h4>
+              <h5>31 May & 2, 3 June 2022 </h5>
+              <ul>
+                <li>Yayasan Plan International Indonesia</li>
+              </ul>
+              <h4>OBSERVER and COMMENTER UAT MODULE</h4>
+              <h5>15 October 2022 - 21 October 2022</h5>
+              <ul>
+                <li>User Acceptance Testing online training modules in several fields that are being developed by YEE Plan Indonesia</li>
+              </ul>
+            </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Company Experience</h3>
