--- a/portfolio/port.html
+++ b/portfolio/port.html
@@ -115,14 +115,13 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Creating a simple Campus Application.</h2>
+              <h2>Creating a simple Inventory.</h2>
               <ul>
                 <li>SB Admin 2, PHP CI, Bootstrap 4, Jquery, Javascript, AJAX</li>
                 <li>login for 1 admin and many users</li>
-                <li>Input student data, edit, delete</li>
-                <li>Lecturer data input, change, delete</li>
-                <li>Schedule data input, edit, delete</li>
-                <li>Input course data, edit, delete</li>
+                <li>Input product data, edit, delete</li>
+                <li>Kurir data input, change, delete</li>
+                <li>Table data transaction input, edit, delete</li>
               </ul>
             </div>
           </div>
