--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
            
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Company Experience</h3>
+<!--             <h3 class="resume-title">Company Experience</h3>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
               <h5>Jul 2022 - Jul 2022</h5>
@@ -289,7 +289,7 @@
               <ul>
                 <li>Manage the SIMRS website for public health centers throughout Indonesia in collaboration with the Ministry of Health</li>
               </ul>
-            </div>
+            </div> -->
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
            
