--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              the task that will be given to me I will do my best.
+              The task that will be given to me I will do my best.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 September 1992</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 September</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6285 15788 4134</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Jl. Sunan Gn. Djati, No.42, Kel. Paninggilan Selatan, Kec. Ciledug, Kodya. Tangerang 15153</span></li>
                 </ul>
@@ -156,9 +156,9 @@
 
 
             <div class="progress">
-              <span class="skill">LARAVEL<i class="val">50%</i></span>
+              <span class="skill">LARAVEL<i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           
