--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <h3 class="resume-title">Freelance Experience</h3>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
-              <h5>Feb 2020 - Feb 2023</h5>
+              <h5>Feb 2020 - Present</h5>
               <ul>
                 <li>Podcasting operational change management inside of workflows to establish a framework.</li>
                 <li>Taking seamless key performance indicators offline to maximise the long tail.</li>
