--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
               <h4>JUNIOR WEB DEVELOPER</h4>
               <h5>Feb 2020 - Present</h5>
               <ul>
-                <li>Podcasting operational change management inside of workflows to establish a framework.</li>
-                <li>Taking seamless key performance indicators offline to maximise the long tail.</li>
-                <li>Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</li>
+                <li>Stored, framework, and manipulate data.</li>
+                <li>Create a program according to user wishes</li>
+                <li>Prepared detailed reports</li>
               </ul>
             </div>
           </div>
