--- a/index.html
+++ b/index.html
@@ -307,6 +307,11 @@
               <ul>
                 <li>User Acceptance Testing online training modules in several fields that are being developed by YEE Plan Indonesia</li>
               </ul>
+              <h4>Attended Green Digital Skills training</h4>
+              <h5>2 May 2023 - 4 June 2023</h5>
+              <ul>
+                <li>INCO Academy</li>
+              </ul>
             </div>
           </div>
         </div>
