--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Faisal Khairudin, I'm a freelance who is looking for new challenges in work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, CodeIgniter framework, and other PHP frameworks, besides that I can also use c # with the .net framework. I am also good at SQL.</p>
+          <p>My name is Faisal Khairudin, I'm a freelance who is looking for new challenges in work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, CodeIgniter framework, and other PHP frameworks. I am also good at SQL.</p>
         </div>
 
         <div class="row">
