--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor Of Science</h4>
+              <h4>Bachelor of Informatics Engineering</h4>
               <h5>2014 - 2019</h5>
               <p><em>University of Budi Luhur, Jakarta</em></p>
               <p>Computer Science - System of Information <br>GPA: 3.14</p>
