--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="text-light"><span>Faisal Khairudin</span></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/faisal_kha5" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://web.facebook.com/faisal.yapera1/" class="facebook"><i class="bx bxl-facebook"></i></a>
+<!--           <a href="https://web.facebook.com/faisal.yapera1/" class="facebook"><i class="bx bxl-facebook"></i></a> -->
           <a href="https://www.instagram.com/khrdnfisal/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/faisal-khairudin-7a76a9181/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -253,7 +253,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Informatics Engineering</h4>
+              <h4>Bachelor of Information Engineering</h4>
               <h5>2014 - 2019</h5>
               <p><em>University of Budi Luhur, Jakarta</em></p>
               <p>Computer Science - System of Information <br>GPA: 3.14</p>
@@ -269,7 +269,7 @@
             <h3 class="resume-title">Freelance Experience</h3>
             <div class="resume-item">
               <h4>JUNIOR WEB DEVELOPER</h4>
-              <h5>Feb 2020 - Present</h5>
+              <h5>Feb 2020 - Sep 2023</h5>
               <ul>
                 <li>Stored, framework, and manipulate data.</li>
                 <li>Create a program according to user wishes</li>
