--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Faisal Khairudin, I'm a freelance who is looking for new challenges in work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, CodeIgniter framework, and other PHP frameworks. I am also good at SQL.</p>
+          <p>My name is Faisal Khairudin, I'm a freelancer who is looking for new challenges in work. Web designing is a hobby and I am very interested in the Web Dev / Programmer field. I freelance using php language, CodeIgniter framework, and other PHP frameworks. I am also good at SQL.</p>
         </div>
 
         <div class="row">
@@ -262,7 +262,6 @@
               <h4>Mathematical And Natural Sciences</h4>
               <h5>2011 - 2014</h5>
               <p><em>AN Nurmaniyah High School, Ciledug</em></p>
-              <p>GPA: 7. 20</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
